--- a/values.yaml
+++ b/values.yaml
@@ -2434,13 +2434,28 @@ ssoauth:
 # This block defines the parameters common to all the Pods of this application
 #
 studio:
+  # studio.enabled Enables Studio installation
+  enabled: true
+  # studio.kind The controller used for deploy
+  # Possible values are `Deployment` (default) or `StatefulSet`
+  kind: Deployment
   # studio.replicaCount Number of Studio replicas to deploy
   replicaCount: 1
   # Update strategy used to replace old Pods by new ones
   updateStrategy:
-    # studio.updateStrategy.type Studio StatefulSet update strategy type
-    # Allowed values: `RollingUpdate` or `OnDelete`
+    # studio.updateStrategy.type Studio update strategy type
+    # Allowed values: `RollingUpdate` or `OnDelete` if `studio.kind` is set to `StatefulSet` and `RollingUpdate` or `Recreate` if `studio.kind` is set to `Deployment`
     type: RollingUpdate
+    # studio.updateStrategy.rollingUpdate Used only when `studio.updateStrategy.type=RollingUpdate`
+    rollingUpdate:
+      # studio.updateStrategy.rollingUpdate.maxUnavailable Maximum number of Studio Pods unavailable during the update process
+      maxUnavailable: 25%
+      # studio.updateStrategy.rollingUpdate.maxSurge Maximum number of Studio Pods created over the desired number of Pods
+      maxSurge: 25%
+  # studio.podManagementPolicy The Studio Pods scaling operations policy
+  # Used if `studio.kind` is set to `StatefulSet`
+  # ref: https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/#pod-management-policies
+  podManagementPolicy: OrderedReady
   # Pod affinity rules for Studio Pod scheduling by nodes relative to other Pods
   # Pod affinity allow you to constrain which nodes Studio Pods can be scheduled on based on the labels of Pods already running on that node
   # ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#inter-pod-affinity-and-anti-affinity
